# friend-cal

./: .gitignore  CLAUDE.md  README.md  auth.py  calendar_service.py  cli.py  db.py  events.py  main.py  models.py  nextcloud.py  pyproject.toml  web.py
friend_cal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
static/: calendar.js  style.css
templates/: base.html  calendar.html  index.html  macros.html
templates/auth/: login.html  signup.html
templates/events/: detail.html  edit_form.html
