[project]
name = "friend-cal"
version = "0.1.0"
description = "Shared calendar and scheduling system for a group of friends"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
]

[project.scripts]
friend-cal = "main:run"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
package = true
