[project]
name = "friend-cal"
version = "0.1.0"
description = "Shared calendar and scheduling system for a group of friends"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "sqlmodel>=0.0.1",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.1.0",
    "python-multipart>=0.0.9",
    "caldav>=1.3.0",
    "icalendar>=5.0.0",
]

[project.scripts]
friend-cal = "main:run"
friend-cal-invite = "cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "cli", "db", "models", "auth", "templating", "calendar_service", "events", "web", "nextcloud"]

[tool.uv]
package = true
